--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,6 +10,7 @@ html {
 body {
     font-size: 1.6rem;
     background: theme("colors.primary.dark.900");
+    font-family: "Roboto", "Arial", sans-serif;
 }
 
 input:focus-visible {
